# Kaggle-Competition-NBA-Basketball-

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
models/: LGB_best_model.joblib  LGB_default.joblib  Log_reg.joblib  SVM_best_model.joblib  prediction_model3.csv
notebooks/: LightGBM.ipynb  Logistic Regression.ipynb  SVM.ipynb
reports/: EXPERIMENT REPORT1.docx  EXPERIMENT REPORT2.docx  EXPERIMENT REPORT3.docx  FINAL REPORT.docx
results/: prediction_model1.csv  prediction_model2.csv  prediction_model2_1.csv  prediction_model3_1.csv
src/: build_features.py  predict_model.py  train_model.py  visualize.py
