[tool.poetry]
name = "adv-mla-at1"
version = "0.1.0"
description = ""
authors = ["Simon Lim"]
readme = "README.md"
packages = [{include = "adv_mla_at1"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
